Add link between users and messages
