# internal/handlers/messageHandlers.go
@@ -3,26 +3,29 @@ package handlers
 import (
 	"context"
 	"stage/internal/messageservice"
+	"stage/internal/userservice"
 	"stage/internal/web/messages"
 )
 
 type MessageHandler struct {
-	Service *messageservice.MessageService
+	MessageService *messageservice.MessageService
+	UserService    *userservice.UserService
 }
 
-func (h *MessageHandler) GetMessages(_ context.Context, _ messages.GetMessagesRequestObject) (messages.GetMessagesResponseObject, error) {
-	allMessages, err := h.Service.GetAllMessages()
+func (h *MessageHandler) GetMessagesByUserId(_ context.Context, request messages.GetMessagesByUserIdRequestObject) (messages.GetMessagesByUserIdResponseObject, error) {
+	allMessages, err := h.UserService.GetMessagesForUser(request.Id)
 	if err != nil {
 		return nil, err
 	}
 
-	response := messages.GetMessages200JSONResponse{}
+	response := messages.GetMessagesByUserId200JSONResponse{}
 
 	for _, mes := range allMessages {
 		message := messages.Message{
 			Id:     &mes.ID,
 			Task:   &mes.Task,
 			IsDone: &mes.IsDone,
+			UserId: &mes.UserID,
 		}
 		response = append(response, message)
 	}
@@ -36,8 +39,9 @@ func (h *MessageHandler) PostMessages(_ context.Context, request messages.PostMe
 	messageToCreate := messageservice.Message{
 		Task:   *messageRequest.Task,
 		IsDone: *messageRequest.IsDone,
+		UserID: *messageRequest.UserId,
 	}
-	createdMessage, err := h.Service.CreateMessage(messageToCreate)
+	createdMessage, err := h.MessageService.CreateMessage(messageToCreate)
 
 	if err != nil {
 		return nil, err
@@ -47,6 +51,7 @@ func (h *MessageHandler) PostMessages(_ context.Context, request messages.PostMe
 		Id:     &createdMessage.ID,
 		Task:   &createdMessage.Task,
 		IsDone: &createdMessage.IsDone,
+		UserId: &createdMessage.UserID,
 	}
 
 	return response, nil
@@ -58,7 +63,7 @@ func (h *MessageHandler) PatchMessageById(_ context.Context, request messages.Pa
 	messageToUpdate := messageservice.Message{
 		IsDone: *messageRequest.IsDone,
 	}
-	updatedMessage, err := h.Service.UpdateMessageByID(request.Id, messageToUpdate)
+	updatedMessage, err := h.MessageService.UpdateMessageByID(request.Id, messageToUpdate)
 
 	if err != nil {
 		return nil, err
@@ -74,7 +79,7 @@ func (h *MessageHandler) PatchMessageById(_ context.Context, request messages.Pa
 }
 
 func (h *MessageHandler) DeleteMessageById(_ context.Context, request messages.DeleteMessageByIdRequestObject) (messages.DeleteMessageByIdResponseObject, error) {
-	err := h.Service.DeleteMessageByID(request.Id)
+	err := h.MessageService.DeleteMessageByID(request.Id)
 	if err != nil {
 		return nil, err
 	}
@@ -82,8 +87,9 @@ func (h *MessageHandler) DeleteMessageById(_ context.Context, request messages.D
 	return messages.DeleteMessageById204Response{}, err
 }
 
-func NewMessageHandler(service *messageservice.MessageService) *MessageHandler {
+func NewMessageHandler(messageService *messageservice.MessageService, userService *userservice.UserService) *MessageHandler {
 	return &MessageHandler{
-		Service: service,
+		MessageService: messageService,
+		UserService:    userService,
 	}
 }
