# openapi/openapi.yaml
@@ -3,11 +3,20 @@ info:
   title: API
   version: 1.0.0
 paths:
-  /messages:
+  /messages/user/{id}:
     get:
-      summary: Get all messages
+      summary: Get messages by user id
+      operationId: GetMessagesByUserId
       tags:
         - messages
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: uint
+          description: User id for get messages
       responses:
         "200":
           description: A list of messages
@@ -17,6 +26,7 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Message"
+  /messages:
     post:
       summary: Create a new message
       tags:
@@ -168,6 +178,9 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint
     User:
       type: object
       properties:
